src/parsing/snapshots/bevy_state_plugin_generator__parsing__tests__parse_node@Name_{A}.snap
---
source: src/parsing/tests.rs
expression: parse_node(input)
---
Ok(("", Enum(Identifier("Name"), [Singleton(Identifier("A"))])))
