src/parsing/snapshots/bevy_state_plugin_generator__parsing__tests__parse_node_nested_enums.snap
---
source: src/parsing/tests.rs
expression: parse_node(input)
---
Ok(
    (
        "",
        Enum(
            Identifier(
                "Root",
            ),
            [
                Enum(
                    Identifier(
                        "A",
                    ),
                    [
                        Singleton(
                            Identifier(
                                "B",
                            ),
                        ),
                        Enum(
                            Identifier(
                                "C",
                            ),
                            [
                                Singleton(
                                    Identifier(
                                        "D",
                                    ),
                                ),
                                Enum(
                                    Identifier(
                                        "E",
                                    ),
                                    [
                                        Singleton(
                                            Identifier(
                                                "F",
                                            ),
                                        ),
                                        Singleton(
                                            Identifier(
                                                "G",
                                            ),
                                        ),
                                    ],
                                ),
                            ],
                        ),
                        Singleton(
                            Identifier(
                                "H",
                            ),
                        ),
                    ],
                ),
                Singleton(
                    Identifier(
                        "I",
                    ),
                ),
                Singleton(
                    Identifier(
                        "J",
                    ),
                ),
            ],
        ),
    ),
)
